WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53937
Some content is not covered by Find-on-page overlay
https://bugs.webkit.org/show_bug.cgi?id=53937
Summary
Some content is not covered by Find-on-page overlay
Anders Carlsson
Reported
2011-02-07 13:05:11 PST
Some content is not covered by Find-on-page overlay
Attachments
Patch
(11.16 KB, patch)
2011-02-07 13:10 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-07 13:10:59 PST
Created
attachment 81513
[details]
Patch
Anders Carlsson
Comment 2
2011-02-07 13:42:12 PST
Committed
r77842
: <
http://trac.webkit.org/changeset/77842
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug