Source/WebKit2/WebProcess/WebPage/LayerTreeHost.h
@@ -52,7 +52,11 @@ public:
     virtual void setNonCompositedContentsNeedDisplay(const WebCore::IntRect&) = 0;
     virtual void scrollNonCompositedContents(const WebCore::IntRect& scrollRect, const WebCore::IntSize& scrollOffset) = 0;
     virtual void sizeDidChange(const WebCore::IntSize& newSize) = 0;
-    
+
+    virtual void didInstallPageOverlay() = 0;
+    virtual void didUninstallPageOverlay() = 0;
+    virtual void setPageOverlayNeedsDisplay(const WebCore::IntRect&) = 0;
+
 protected:
     explicit LayerTreeHost(WebPage*);
 
