Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -697,9 +697,10 @@ void WebPage::installPageOverlay(PassRefPtr<PageOverlay> pageOverlay)
 
     m_pageOverlay = pageOverlay;
     m_pageOverlay->setPage(this);
-    m_pageOverlay->setNeedsDisplay();
 
     m_drawingArea->didInstallPageOverlay();
+
+    m_pageOverlay->setNeedsDisplay();
 }
 
 void WebPage::uninstallPageOverlay(PageOverlay* pageOverlay)
